--- a/arch/arm64/configs/omni_oneplus5_defconfig
+++ b/arch/arm64/configs/omni_oneplus5_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.88 Kernel Configuration
+# Linux/arm64 4.4.78 Kernel Configuration
 #
 CONFIG_VENDOR_ONEPLUS=y
 CONFIG_ARM64=y
@@ -498,6 +498,7 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 CONFIG_ARM64_MODULE_PLTS=y
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
+CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
@@ -3957,31 +3958,29 @@ CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_QCACLD_FEATURE_NAN=y
-CONFIG_WLAN_FEATURE_NAN_DATAPATH=y 
+CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
 CONFIG_QCACLD_FEATURE_GREEN_AP=y
 CONFIG_HELIUMPLUS=y
-CONFIG_64BIT_PADDR=y 
+CONFIG_64BIT_PADDR=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
-CONFIG_MPC_UT_FRAMEWORK=y 
+CONFIG_MPC_UT_FRAMEWORK=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_WLAN_FEATURE_MEMDUMP=y
-CONFIG_FEATURE_TSO=y 
+CONFIG_FEATURE_TSO=y
 # CONFIG_FEATURE_TSO_DEBUG is not set
 CONFIG_WLAN_FASTPATH=y
 CONFIG_WLAN_NAPI=y
 # CONFIG_WLAN_NAPI_DEBUG is not set
 CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
-CONFIG_WLAN_LRO=y
-CONFIG_WLAN_SYNC_TSF=y 
-CONFIG_LFR_SUBNET_DETECTION=y 
+CONFIG_WLAN_SYNC_TSF=y
+CONFIG_LFR_SUBNET_DETECTION=y
 CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_QCACLD_WLAN_LFR2=y
 CONFIG_WLAN_FEATURE_DISA=y
 # CONFIG_WLAN_SPECTRAL_SCAN is not set
 # CONFIG_ICMP_DISABLE_PS is not set
 # CONFIG_CONFIG_BUILD_TIMESTAMP is not set
-
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
@@ -4142,6 +4141,7 @@ CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 CONFIG_MSM_MPM_OF=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_AVTIMER=y
+# CONFIG_MSM_KERNEL_PROTECT is not set
 CONFIG_QCOM_REMOTEQDSS=y
 CONFIG_MSM_SERVICE_NOTIFIER=y
 # CONFIG_MSM_QBT1000 is not set
@@ -4604,7 +4604,6 @@ CONFIG_SDCARD_FS=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
-# CONFIG_PSTORE_FTRACE is not set
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
@@ -4802,30 +4801,7 @@ CONFIG_IPC_LOGGING=y
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
-CONFIG_FTRACE=y
-CONFIG_FUNCTION_TRACER=y
-CONFIG_FUNCTION_GRAPH_TRACER=y
-# CONFIG_IRQSOFF_TRACER is not set
-# CONFIG_PREEMPT_TRACER is not set
-# CONFIG_SCHED_TRACER is not set
-# CONFIG_FTRACE_SYSCALLS is not set
-# CONFIG_TRACER_SNAPSHOT is not set
-CONFIG_BRANCH_PROFILE_NONE=y
-# CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
-# CONFIG_PROFILE_ALL_BRANCHES is not set
-# CONFIG_STACK_TRACER is not set
-# CONFIG_BLK_DEV_IO_TRACE is not set
-# CONFIG_PROBE_EVENTS is not set
-CONFIG_DYNAMIC_FTRACE=y
-# CONFIG_FUNCTION_PROFILER is not set
-CONFIG_CPU_FREQ_SWITCH_PROFILER=y
-CONFIG_FTRACE_MCOUNT_RECORD=y
-# CONFIG_FTRACE_STARTUP_TEST is not set
-# CONFIG_TRACEPOINT_BENCHMARK is not set
-# CONFIG_RING_BUFFER_BENCHMARK is not set
-# CONFIG_RING_BUFFER_STARTUP_TEST is not set
-# CONFIG_TRACE_ENUM_MAP_FILE is not set
-CONFIG_TRACING_EVENTS_GPIO=y
+# CONFIG_FTRACE is not set
 
 #
 # Runtime Testing
