op5: defconfig> less debuging
Change-Id: Ia32df395d64558ef1133f636626fad271e2017ab

--- a/arch/arm64/configs/omni_oneplus5_defconfig
+++ b/arch/arm64/configs/omni_oneplus5_defconfig
@@ -4673,7 +4673,7 @@ CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 
 #
 # Compile-time checks and compiler options
@@ -4842,25 +4842,7 @@ CONFIG_DEBUG_RODATA=y
 # CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_EVENT=y
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_LINKS_AND_SINKS=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-# CONFIG_CORESIGHT_SINK_TPIU is not set
-# CONFIG_CORESIGHT_SINK_ETBV10 is not set
-# CONFIG_CORESIGHT_SOURCE_ETM4X is not set
-# CONFIG_CORESIGHT_REMOTE_ETM is not set
-CONFIG_CORESIGHT_QCOM_REPLICATOR=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_CTI=y
-# CONFIG_CORESIGHT_CTI_SAVE_DISABLE is not set
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-# CONFIG_CORESIGHT_TPDM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_QPDI=y
-CONFIG_CORESIGHT_SOURCE_DUMMY=y
+# CONFIG_CORESIGHT is not set
 
 #
 # Security options
