--- a/arch/arm64/configs/omni_oneplus5_defconfig
+++ b/arch/arm64/configs/omni_oneplus5_defconfig
@@ -4567,6 +4567,7 @@ CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_NTFS_FS=y
+CONFIG_EXFAT_FS=y
 
 #
 # Pseudo filesystems
