--- a/arch/arm/boot/dts/qcom/cheeseburger.dtsi
+++ b/arch/arm/boot/dts/qcom/cheeseburger.dtsi
@@ -494,19 +494,19 @@
 	};
 };
 
-
-/*pcie 0 don't used,gpio 37 will used in nfc. but gpio37 will request in pcie0. so disable it*/
+/*pcie 0 don't used,gpio 37 will used in nfc.*/
+/*but gpio37 will request in pcie0. so disable it*/
 &pcie0 {
-	status = "disabled";
+        status = "disabled";
 };
 
 &i2c_6 { /* BLSP1 QUP6 (NFC) */
-	status = "disabled";
+        status = "disabled";
 };
 
 &i2c_6 { /* BLSP1 QUP6 (NFC) */
-	status = "okay";
-	nq@28 {
+        status = "okay";
+        nq@28 {
                 compatible = "qcom,nq-nci";
                 qcom,nq-irq = <&tlmm 92 0x00>;
                 qcom,nq-ven = <&tlmm 12 0x00>;
